# SnowieCaster

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql.yml  pylint.yml  python-app.yml  python-package.yml
SnowieCaster/: __init__.py  abstract.py  base.py
SnowieCaster/backends/memory/: memory.py
docs/: abstract.html  base.html  index.html
docs/backends/: index.html
docs/backends/memory/: index.html  memory.html
prof/: combined.prof  test_abstract_backend.prof  test_backend_interface.prof  test_caster_delete.prof  test_caster_start.prof  test_caster_stop.prof  test_get_all.prof  test_import.prof  test_memory_caster.prof  test_stop.prof  test_store_none.prof  test_subscription_init.prof  test_subscription_iteration.prof  test_subscription_updater.prof  test_update_no_data.prof  test_update_no_start.prof  test_update_no_sub.prof
snowiecaster/: abstract.py
snowiecaster/backends/memory/: __init__.py
src/SnowieCaster/: __init__.py  abstract.py  base.py
src/SnowieCaster/backends/: __init__.py
src/SnowieCaster/backends/memory/: memory.py
tests/: conftest.py  test_abstract.py  test_base.py  test_import.py  test_memory.py
tests/fixtures/: memory_fixtures.py  test_backend_fixtures.py
