[tool.poetry]
name = "snowiecaster"
version = "0.1.3"
description = ""
authors = ["AndreiErshov <mtaprovince04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-order = "^1.0.1"
pytest-cov = "^4.0.0"
pytest-profiling = "^1.7.0"
mypy = "^1.0.0"
pylint = "^2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
